# mcp-python

./: .gitignore  README.md  pyproject.toml
src/mcp_python/: server.py
