[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-python-repl"
version = "0.1.0"
description = "MCP server providing a Python REPL with persistent session"
requires-python = ">=3.10"
dependencies = ["mcp"]

[project.scripts]
python-repl = "python_repl:main"
