[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-python"
version = "0.2.0"
description = "MCP server providing a Python REPL with persistent session"
requires-python = ">=3.10"  # Will be compatible with Python 3.13 when released
dependencies = [
    "fastmcp>=2.2.0",
    "llm-credential-manager",
    "llm-parser-filter",
    "mcp-gsuite",
    "pytest>=8.3.5",
    "python-dotenv",
]
authors = [{ name = "Tynan Daly", email = "tynan@hdr.is" }]
license = "MIT"
keywords = ["mcp", "repl", "python", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/piplin-es/mcp-python"
Repository = "https://github.com/piplin-es/mcp-python.git"
Issues = "https://github.com/piplin-es/mcp-python/issues"
Github = "https://github.com/piplin-es/mcp-python"

[project.scripts]
mcp-python = "mcp_python:main"

# Add this section to tell Hatch where to find the package files
[tool.hatch.build.targets.wheel]
packages = ["src/mcp_python"]

[tool.uv.sources]
mcp-gsuite = { path = "../mcp-gsuite" }
llm-parser-filter = { path = "../llm-parser-filter" }
llm-credential-manager = { path = "../llm-credential-manager" }
